// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render TitleCase, matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PureComponent
    inputDesignation="title"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "autoFocus": undefined,
      "caution": undefined,
      "className": undefined,
      "maxLength": undefined,
      "onChange": [Function],
      "onKeyPress": undefined,
      "placeholder": undefined,
      "value": "",
      "warning": undefined,
    },
    "ref": "input",
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "autoFocus": undefined,
        "caution": undefined,
        "className": undefined,
        "maxLength": undefined,
        "onChange": [Function],
        "onKeyPress": undefined,
        "placeholder": undefined,
        "value": "",
        "warning": undefined,
      },
      "ref": "input",
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render TitleCase, matches snapshot 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PureComponent
    inputDesignation="subtitle"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "autoFocus": undefined,
      "caution": undefined,
      "className": undefined,
      "maxLength": undefined,
      "onChange": [Function],
      "onKeyPress": undefined,
      "placeholder": undefined,
      "value": "",
      "warning": undefined,
    },
    "ref": "input",
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "autoFocus": undefined,
        "caution": undefined,
        "className": undefined,
        "maxLength": undefined,
        "onChange": [Function],
        "onKeyPress": undefined,
        "placeholder": undefined,
        "value": "",
        "warning": undefined,
      },
      "ref": "input",
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
